--- a/lane4Solutions/src/app/login/component/signin/signin.component.css
+++ b/lane4Solutions/src/app/login/component/signin/signin.component.css
@@ -12,15 +12,16 @@ h2{
     border: 0.40rem solid #f8f9fa;
     top: 10%;
   }
+  .form-group{
+    height: 100px;
+  }
   .form-control{
     background-color: #f8f9fa;
     padding: 20px;
     padding: 15px;
-    margin-bottom: 1.3rem;
   }
   
   .form-control:focus {
-  
       color: #000000;
       background-color: #ffffff;
       border: 3px solid #da5767;
